tests/compile-fail/compile_fail__meta_sprite_id_non_const.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: expression not supported in sprite ID
   ┌─ <input>:31:61
   │
31 │         sprite200: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 3 * I0},
   │                                                             ^^^^^^ unsupported expression


